# sentiment-app

./: client.py  create_data.py  evaluate.py  pyproject.toml  requirements.txt  train.py  vercel.json
api/: main.py
data/: create_data.py  sentiment_dataset.csv  word_labels.csv
frontend/: index.html
models/: model.joblib  vectorizer.joblib
