[project]
name = "sentiment-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "janome>=0.5.0",
    "joblib>=1.5.3",
    "mecab-python3>=1.0.12",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "sentiment-app",
]
